[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
default-run = "Maintain"
documentation = "https://Documentation.Maintain.Editor.Land"
edition = "2021"
homepage = "https://Maintain.Editor.Land"
license-file = "LICENSE"
name = "Maintain"
publish = false
repository = "https://github.com/CodeEditorLand/CargoMaintain"
version = "0.0.1"

[[bin]]
name = "Maintain"
path = "Source/Library.rs"

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive"] }
git2 = "0.19.0"
proc_use = "0.2.1"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
dotenv = "0.15"
octocrab = "0.42.1"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }

[build-dependencies]
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
